--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     cursor: pointer;
     border-radius: 25px;
 }
+
+td, th {
+    padding: 10px;
+    font-size: 30px;
+}
+
 </style>
     <title>clip2</title>
   </head>
@@ -41,6 +47,24 @@
     신뢰할 수 없는 기업용 App개발자 팝업이 뜰 경우 
     <br>
     설정 - 일반 - 기기 관리 - KT - 'KT'을(를) 신뢰함 을 신뢰로 해주시면 사용 가능합니다.
+    <table id="android-table" border="1" style="margin-top:50px">
+        <tr>
+            <th>배포일</td>
+            <th>순서</td>
+            <th>버전</td>
+            <th>서버종류</td>
+            <th>패키지명</td>
+            <th>APK 다운로드</td>
+        </tr>
+        <tr>
+            <td>2016.12.01</td>
+            <td>1</td>
+            <td>06.00.17</td>
+            <td>상용</td>
+            <td>com.kt.android.showtouch</td>
+            <td><a href="./android/app_clipcard_signed_real_debug_20161201_02.apk">다운로드</a></td>
+        </tr>
+    </table>
  </body>
 </html>
 
