--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ td, th {
     신뢰할 수 없는 기업용 App개발자 팝업이 뜰 경우 
     <br>
     설정 - 일반 - 기기 관리 - KT - 'KT'을(를) 신뢰함 을 신뢰로 해주시면 사용 가능합니다.
-    <table id="android-table" border="1" style="margin-top:50px">
+<!--     <table id="android-table" border="1" style="margin-top:50px">
         <tr>
             <th>배포일</td>
             <th>순서</td>
@@ -65,6 +65,6 @@ td, th {
             <td><a href="./android/app_clipcard_signed_real_debug_20161201_02.apk">다운로드</a></td>
         </tr>
     </table>
- </body>
+ --> </body>
 </html>
 
